--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -22,7 +22,7 @@ apps:
     environment:
       THONNY_USER_DIR: $SNAP_USER_DATA
       TMPDIR: $XDG_RUNTIME_DIR
-      PYTHONPATH: ${SNAP}/lib/python3.10/site-packages:${SNAP}/usr/local/lib/python3.10/dist-packages
+      PYTHONPATH: ${SNAP}/lib/python3.9/site-packages:${SNAP}/usr/local/lib/python3.9/dist-packages
     plugs:
       - home
       - unity7
@@ -45,8 +45,8 @@ apps:
 
 parts:
   python:
-    source: https://www.python.org/ftp/python/3.10.13/Python-3.10.13.tar.xz
-    source-checksum: md5/8847dc6458d1431d0ae0f55942deeb89
+    source: https://www.python.org/ftp/python/3.9.18/Python-3.9.18.tar.xz
+    source-checksum: md5/765576c3af57deb046819ecd57804bbb
     plugin: autotools
     configflags:
       - --prefix=/usr
@@ -60,9 +60,11 @@ parts:
       - libffi-dev 
       - libbz2-dev 
       - tk-dev
+      - liblzma-dev
+      - uuid-dev
     prime:
       - -usr/include
-      - -usr/lib/libpython3.10.a
+      - -usr/lib/libpython3.9.a
       - -usr/lib/pkgconfig
       - -usr/share/man
   
@@ -71,7 +73,7 @@ parts:
     plugin: nil
     override-build: |
       snapcraftctl build
-      pip install --prefix=$SNAPCRAFT_PART_INSTALL/usr thonny==4.1.2
+      pip3 install --prefix=$SNAPCRAFT_PART_INSTALL/usr thonny==4.1.2
 
   utils: 
     source: https://github.com/thonny/thonny.git
