--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -44,13 +44,13 @@ apps:
 
 parts:
   tcl:
-    source: https://sourceforge.net/projects/tcl/files/Tcl/8.6.13/tcl8.6.13-src.tar.gz/download
+    source: https://sourceforge.net/projects/tcl/files/Tcl/8.6.13/tcl8.6.13-src.tar.gz
     plugin: autotools
     configflags:
       - --prefix=/usr
         
   tk:
-    source: https://sourceforge.net/projects/tcl/files/Tcl/8.6.13/tk8.6.13-src.tar.gz/download
+    source: https://sourceforge.net/projects/tcl/files/Tcl/8.6.13/tk8.6.13-src.tar.gz
     after: [tcl]
     plugin: autotools
     configflags:
@@ -89,7 +89,6 @@ parts:
       - -usr/bin/idle*
 
   thonny:
-    after: [python]
     source: https://github.com/thonny/thonny.git
     source-tag: v4.1.2
     after: [python]
