Use make instead of autotools #1

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -46,14 +46,14 @@ parts:
   tcl:
     source: https://sourceforge.net/projects/tcl/files/Tcl/8.6.13/tcl8.6.13-src.tar.gz
     plugin: make
-    configflags:
+    make-parameters:
       - --prefix=/usr
         
   tk:
     source: https://sourceforge.net/projects/tcl/files/Tcl/8.6.13/tk8.6.13-src.tar.gz
     after: [tcl]
     plugin: make
-    configflags:
+    make-parameters:
       - --prefix=/usr 
       - --disable-xss
      
