--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -21,6 +21,7 @@ apps:
     common-id: org.thonny.Thonny
     environment:
       THONNY_USER_DIR: $SNAP_USER_DATA
+      PYTHONPATH: ${SNAP}/lib/python3.9/site-packages:${SNAP}/usr/lib/python3.9/site-packages
       TMPDIR: $XDG_RUNTIME_DIR
     plugs:
       - home
@@ -43,9 +44,25 @@ apps:
     desktop: utils/org.thonny.Thonny.desktop
 
 parts:
+  tcltk:
+    plugin: nil
+    source: .
+    build-packages:
+      - make
+      - wget
+    override-build: |
+      snapcraftctl build
+      bash tcltk.sh
+    prime:
+      - -usr/include
+      - -usr/lib/pkgconfig  
+      - -usr/man
+      - -usr/share/man
+      
   python:
     source: https://www.python.org/ftp/python/3.9.18/Python-3.9.18.tar.xz
     source-checksum: md5/765576c3af57deb046819ecd57804bbb
+    after: [tcltk]
     plugin: autotools
     configflags:
       - --prefix=/usr
@@ -56,11 +73,9 @@ parts:
       - libnss3-dev
       - libssl-dev
       - libreadline-dev
-      - libffi-dev
       - libbz2-dev 
       - lzma-dev 
       - liblzma-dev 
-      - tk-dev
       - xz-utils
       - uuid-dev  
     prime:
@@ -71,8 +86,11 @@ parts:
       - -usr/lib/*/test
       - -usr/lib/*/idlelib
       - -usr/lib/*/lib2to3
+      - -usr/lib/*/config-3.9*
+      - -usr/lib/python3.9/site-packages/setuptools*
       - -usr/bin/2to3*
       - -usr/bin/idle*
+      - -usr/bin/pydoc*
 
   thonny:
     source: https://github.com/thonny/thonny.git
