--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -89,7 +89,7 @@ parts:
       - -usr/lib/*/test
       - -usr/lib/*/idlelib
       - -usr/lib/*/lib2to3
-      - -usr/lib/*/config-3.9*
+      - -usr/lib/*/config-3.9-$SNAPCRAFT_ARCH_TRIPLET/libpython3.9*
       - -usr/bin/2to3*
       - -usr/bin/idle*
       - -usr/bin/pydoc*
