--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: thonny
-base: core18
+base: core20
 adopt-info: thonny
 grade: stable
 confinement: strict
@@ -17,11 +17,11 @@ slots:
 apps:
   thonny:
     command: bin/thonny
-    extensions: [gnome-3-34]
+    extensions: [gnome-3-38]
     common-id: org.thonny.Thonny
     environment:
       THONNY_USER_DIR: $SNAP_USER_DATA
-      PYTHONPATH: ${SNAP}/lib/python3.9/site-packages:${SNAP}/usr/lib/python3.9/site-packages
+      PYTHONPATH: ${SNAP}/lib/python3.10/site-packages:${SNAP}/usr/lib/python3.10/site-packages
       TMPDIR: $XDG_RUNTIME_DIR
     plugs:
       - home
@@ -60,11 +60,11 @@ parts:
       - -usr/share/man
       
   python:
-    source: https://www.python.org/ftp/python/3.9.18/Python-3.9.18.tar.xz
-    source-checksum: md5/765576c3af57deb046819ecd57804bbb
+    source: https://www.python.org/ftp/python/3.10.13/Python-3.10.13.tar.xz
+    source-checksum: md5/8847dc6458d1431d0ae0f55942deeb89
     after: [tcltk]
     plugin: autotools
-    configflags:
+    autotools-configure-parameters:
       - --prefix=/usr
       - --with-ensurepip=install
       - --enable-optimizations
@@ -84,14 +84,13 @@ parts:
       - nasm
     prime:
       - -usr/include
-      - -usr/lib/libpython3.9*
       - -usr/lib/pkgconfig
       - -usr/share/man
-      - -usr/lib/*/test
       - -usr/lib/*/idlelib
       - -usr/lib/*/lib2to3
-      - -usr/lib/*/config-3.9-$SNAPCRAFT_ARCH_TRIPLET/libpython3.9*
-      - -usr/lib/*/config-3.9-$SNAPCRAFT_ARCH_TRIPLET/python.o
+      - -usr/lib/libpython3.10.a
+      - -usr/lib/**/libpython3.10.a
+      - -usr/lib/**/python.o
       - -usr/bin/2to3*
       - -usr/bin/idle*
       - -usr/bin/pydoc*
@@ -101,14 +100,23 @@ parts:
     source-tag: v4.1.2
     after: [python]
     plugin: python
-    python-packages:
-      - pylint == 2.17.5
-      - jedi == 0.19.0
-      - pyserial == 3.5
-      - mypy == 1.5.1
-      - docutils == 0.20.1
-      - Send2Trash == 1.8.2
     parse-info: [packaging/linux/org.thonny.Thonny.appdata.xml]
+    build-environment:
+      - PATH: ${SNAPCRAFT_PART_INSTALL}/bin:${PATH}
+      - PYTHONPATH: ""
+      - SNAPCRAFT_PYTHON_INTERPRETER: python3.10
+    stage:
+      - -share/python-wheels
+      - -share/doc
+      - -share/man
+      - -bin/activate*
+      - -bin/Activate.ps1
+      - -bin/python*
+      - -bin/pip*
+      - -include
+      - -pyvenv.cfg
+      - -lib/**/setuptools*
+      - -lib/**/pip*  
    
   utils:
     source: https://github.com/thonny/thonny.git
@@ -124,42 +132,29 @@ parts:
       cp packaging/icons/thonny-256x256.png utils
     prime:
       - utils
-
-  xclip:
-    after: [utils]
-    source: https://github.com/astrand/xclip/archive/refs/tags/0.13.tar.gz
-    plugin: autotools
-    configflags:
-      - --prefix=/usr
-    build-packages:
-      - libxmu-dev
-      - libxmu-headers
-    stage-packages:
-      - libxmu6
-      - libxt6
-    prime:
-      - usr/bin
-      - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libXt.so*
-      - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libXmu.so*
-
+      
   deps:
-    after: [xclip]
+    after: [utils]
     plugin: nil
     stage-packages:
       - libnotify-bin
       - zenity
+      - xclip
     prime:
       - usr/bin/zenity
       - usr/bin/gdialog
       - usr/bin/notify-send
       - usr/share/zenity
+      - usr/bin/xclip*
+      - usr/lib/*/libXss.so*
+      - usr/lib/*/libXmu.so*
 
   cleanup:
     after: [deps]
     plugin: nil
-    build-snaps: [core18, gtk-common-themes, gnome-3-34-1804]
+    build-snaps: [core20, gtk-common-themes, gnome-3-38-2004]
     override-prime: |
       set -eux
-      for snap in "core18" "gtk-common-themes" "gnome-3-34-1804"; do
+      for snap in "core20" "gtk-common-themes" "gnome-3-38-2004"; do
           cd "/snap/$snap/current" && find . -type f,l -name *.so.* -exec rm -f "$SNAPCRAFT_PRIME/{}" \;
       done
