--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -106,7 +106,7 @@ parts:
     parse-info: [packaging/linux/org.thonny.Thonny.appdata.xml]
     build-environment:
       - PARTS_PYTHON_INTERPRETER: python3.11
-      - PATH: ${SNAPCRAFT_PART_INSTALL}/bin:${PATH}
+      - PATH: ${CRAFT_PART_INSTALL}/bin:${PATH}
       - PYTHONPATH: ""
     stage:
       - -share
