--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -6,13 +6,13 @@ confinement: strict
 compression: lzo
 architectures:
   - build-on: amd64
-   
+
 slots:
   thonny:
     interface: dbus
     bus: session
     name: org.thonny.Thonny
- 
+
 apps:
   thonny:
     command: bin/thonny
@@ -39,7 +39,7 @@ apps:
       - udisks2
       - removable-media
       - screen-inhibit-control
-    desktop: packaging/linux/org.thonny.Thonny.desktop   
+    desktop: packaging/linux/org.thonny.Thonny.desktop
 
 parts:
   thonny:
@@ -55,51 +55,16 @@ parts:
            tar xzf - --strip-components=1 -C $SNAPCRAFT_PART_SRC
     override-prime: |
       snapcraftctl prime
-      sed -e 's|Icon=thonny|Icon=${SNAP}/packaging/icons/thonny-256x256.png|' -i packaging/linux/org.thonny.Thonny.desktop 
-    stage:
-      - -packaging/setuptools
-      - -packaging/mac
-      - -packaging/windows
-      - -include 
-      - -thonny
-      - -misc
-      - -templates
-      - -data
-      - -docs
-      - -licenses
-      - -packaging/pip*
-      - -packaging/portable*
-      - -packaging/readme*
-      - -packaging/requirements*
-      - -packaging/icons/preview*
-      - -packaging/license*
-      - -packaging/linux/build*
-      - -packaging/linux/install*
-      - -packaging/linux/create*
-      - -packaging/linux/insert*
-      - -packaging/linux/downinstall*
-      - -packaging/linux/uninstall*
-      - -packaging/linux/readme*
-      - -packaging/linux/README*
-      - -packaging/linux/thonny*
-      - -packaging/linux/Thonny*
+      sed -e 's|Icon=thonny|Icon=${SNAP}/packaging/icons/thonny-256x256.png|' -i packaging/linux/org.thonny.Thonny.desktop
+    prime:
+      - bin
+      - lib
+      - packaging/linux/org.thonny.Thonny*
+      - packaging/icons/thonny-256x256.png
       - -packaging/linux/org.thonny.Thonny.Devel.yaml
-      - -build*
-      - -copy*
-      - -MANIFEST*
-      - -CONTRIBUTING*
-      - -requirements*
-      - -README*
-      - -LICENSE*
-      - -CHANGELOG*
-      - -mypy*
-      - -pyproject*
-      - -install*
-      - -CREDITS*
-      - -setup*         
-      
-  xclip: 
-    after: [thonny] 
+
+  xclip:
+    after: [thonny]
     source: https://github.com/astrand/xclip.git
     source-tag: '0.13'
     plugin: autotools
@@ -107,18 +72,18 @@ parts:
       - --prefix=/usr
     build-packages:
       - libxmu-dev
-      - libxmu-headers 
+      - libxmu-headers
     stage-packages:
       - libxmu6
-      - libxt6   
+      - libxt6
     prime:
       - usr/bin
-      - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libXt.so*
-      - usr/lib/$SNAPCRAFT_ARCH_TRIPLET/libXmu.so*
-     
-  deps: 
+      - usr/lib/*/libXt.so*
+      - usr/lib/*/libXmu.so*
+
+  deps:
     after: [xclip]
-    plugin: nil  
+    plugin: nil
     stage-packages:
       - libnotify-bin
       - zenity
@@ -127,7 +92,7 @@ parts:
       - usr/bin/gdialog
       - usr/bin/notify-send
       - usr/share/zenity
-       
+
   cleanup:
     after: [deps]
     plugin: nil
@@ -136,4 +101,4 @@ parts:
       set -eux
       for snap in "core18" "gtk-common-themes" "gnome-3-34-1804"; do
           cd "/snap/$snap/current" && find . -type f,l -name *.so.* -exec rm -f "$SNAPCRAFT_PRIME/{}" \;
-      done    
+      done
