--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -67,16 +67,6 @@ parts:
     build-environment:
       - PATH: ${CRAFT_PART_INSTALL}/bin:${PATH}
       - PYTHONPATH: ""
-    prime:
-      - -share
-      - -bin/activate*
-      - -bin/Activate.ps1
-      - -bin/python*
-      - -bin/pip*
-      - -include
-      - -pyvenv.cfg
-      - -lib/**/setuptools*
-      - -lib/**/pip*
 
   appinfo:
     source: https://github.com/thonny/thonny.git
@@ -86,7 +76,7 @@ parts:
     override-pull: |
       craftctl default
       sed -e 's|Exec=/usr/bin/thonny %F|Exec=bin/thonny %F|' -i packaging/linux/org.thonny.Thonny.desktop
-      sed -e 's|Icon=thonny|Icon=${SNAP}/utils/thonny-256x256.png|' -i packaging/linux/org.thonny.Thonny.desktop
+      sed -e 's|Icon=thonny|Icon=${SNAP}/appinfo/thonny-256x256.png|' -i packaging/linux/org.thonny.Thonny.desktop
       mkdir appinfo
       cp packaging/linux/org.thonny.Thonny.desktop appinfo
       cp packaging/icons/thonny-256x256.png appinfo
@@ -101,26 +91,15 @@ parts:
       - zenity
       - xclip
     prime:
-      - usr/bin
-      - usr/lib
+      - usr/bin/xclip*
+      - usr/bin/zenity
+      - usr/bin/notify-send
+      - usr/lib/*/libXt.so*
+      - usr/lib/*/libXmu.so*
       - usr/share/zenity
 
-  py-deps:
-    after: [deps]
-    plugin: nil
-    override-build: |
-       craftctl default
-       pip install --prefix=$CRAFT_PART_INSTALL/usr jedi==0.19.1
-       pip install --prefix=$CRAFT_PART_INSTALL/usr platformdirs==4.2.0
-       pip install --prefix=$CRAFT_PART_INSTALL/usr pylint==3.1.0
-       pip install --prefix=$CRAFT_PART_INSTALL/usr docutils==0.20.1
-       pip install --prefix=$CRAFT_PART_INSTALL/usr mypy==1.9.0
-       pip install --prefix=$CRAFT_PART_INSTALL/usr asttokens==2.4.1
-       pip install --prefix=$CRAFT_PART_INSTALL/usr Send2Trash==1.8.2
-       pip install --prefix=$CRAFT_PART_INSTALL/usr packaging==24.0
-
   cleanup:
-    after: [py-deps]
+    after: [deps]
     plugin: nil
     build-snaps: [core22, gtk-common-themes, gnome-42-2204]
     override-prime: |
